modified:   requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ opencv-python-headless==4.6.0.66
 mediapipe==0.10.15
 pyautogui==0.9.52
 numpy==1.21.0
-setuptools>=68.0.0
+setuptools>=68.2.2
+wheel>=0.42.0
+six>=1.16.0
