--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==2.1.0
-opencv-python==4.5.5.64
-mediapipe==0.8.9.1
-PyAutoGUI==0.9.53
+Flask==2.3.3
+opencv-python==4.7.0.72
+mediapipe==0.10.14
+pyautogui==0.9.53
